# rusted_work

./: .env
build_scriptsAndFFI/: Cargo.toml  build.rs
build_scriptsAndFFI/src/: main.rs
chat-lp2p/: Cargo.toml
chat-lp2p/src/: main.rs  main.rs.bak
finger_test/: Cargo.toml
finger_test/FingerJetFXOSE/FingerJetFXOSE/libFJFX/src/: FJFX.cpp
gui_demo/: Cargo.toml
gui_demo/src/: main.rs
irtracker/: Cargo.toml  test.db
p2p-recipe/: .gitignore  Cargo.toml
p2p-recipe/src/: main.rs
p2p-recipe/wasm/: Cargo.toml
p2p-recipe/wasm/src/: lib.rs
patience/: Cargo.toml
patience/src/: main.rs
polkadot/: notes.md
polkadot/polka-init/: .env  Cargo.toml
polkadot/polka-init/src/: main.rs
polkadot/polkadot/runtime/polkadot/src/: lib.rs
polkadot/specs/: para-plainSpec.json  para-rawSpec.json
polkadot/test1/: Cargo.toml
polkadot/test1/coordinateGUI/: Readme.md
polkadot/test1/coordinateGUI/react-app/: package-lock.json
polkadot/test1/coordinateGUI/react-app/src/: App.js
polkadot/test1/coordinateGUI/server/: main.py
polkadot/test1/src/: main.rs
polkadot/xtra/: para-2000-genesis-state  para-2000-wasm
ptesting/reverse_shell/: client.rs
ptesting/reverse_shell/src/: main.rs
ptesting/shell_cmd_exec/: Cargo.toml
ptesting/shell_cmd_exec/src/: main.rs
rabbit/: Cargo.toml  client_config.toml  server_config.toml
rabbit/src/: redir.rs
rustyVPN/: Cargo.toml
rustyVPN/src/: server.rs
substrate_with_migrate/: Cargo.toml
substrate_with_migrate/node/src/: rpc.rs
substrate_with_migrate/pallets/balances/: Cargo.toml
substrate_with_migrate/pallets/migration/: Cargo.toml
substrate_with_migrate/pallets/migration/src/: lib.rs  weights.rs
substrate_with_migrate/runtime/: Cargo.toml
substrate_with_migrate/runtime/src/: lib.rs
substrate_with_migrate/runtime/src/weights/: mod.rs  pallet_migration_manager.rs
wasmVM/: Cargo.toml
wasmVM/src/: main.rs
webasm/img_effects_wasm/: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
webasm/img_effects_wasm/bundles/: 235.index.js  index.html  index.js
webasm/img_effects_wasm/public/: index.html  main.js
webasm/img_effects_wasm/public/css/: css2.css
webasm/img_effects_wasm/src/: lib.rs
