[package]
name = "irtracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = "2.0.1-dev"
dotenv = "0.15.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"
uuid = "1.2.1"
